// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ARBAColumnConfiguration component should render column "annotation_covered": annotation_covered 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      protein name
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ARBAColumnConfiguration component should render column "reviewed_protein_count": reviewed_protein_count 1`] = `<DocumentFragment />`;

exports[`ARBAColumnConfiguration component should render column "rule_id": rule_id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/arba/ARBA00013665"
    >
      ARBA00013665
    </a>
  </span>
</DocumentFragment>
`;

exports[`ARBAColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=(source:ARBA00013665)"
      >
        608 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?facets=reviewed:false&query=(source:ARBA00013665)"
      >
        608 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ARBAColumnConfiguration component should render column "taxonomic_scope": taxonomic_scope 1`] = `<DocumentFragment />`;

exports[`ARBAColumnConfiguration component should render column "unreviewed_protein_count": unreviewed_protein_count 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb?facets=reviewed:false&query=(source:ARBA00013665)"
  >
    608 unreviewed UniProtKB entries
  </a>
</DocumentFragment>
`;
